@@ -6,6 +6,14 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.71.00
 
+              pamstereogram: Add -xbegin.  Change default to render from
+              center outwards intead of from right to left, thus making the
+              center of the image the crispest part.  Thanks Scott Pakin
+              (scott@pakin.org).
+
+              pamstereogram: Allow -xshift and -yshift to be negative.  Thanks
+              Scott Pakin (scott@pakin.org).
+
               pnmpsnr: Add -rgb.
 
               ppmtoicr: remove -rle option.  Actually, it never worked
